# xtrem-craft-workshop

./: README.md
.github/workflows/: ci.yml
docs/solution/: 01-code-review.md  02-dirty-code-clean-code.md  03-expressive-code.md  06-example-mapping.md  11-example-mapping.md
python/: pyproject.toml  requirements.txt
python/src/: bank.py  missing_exchange_rate_error.py  money.py  portfolio.py
python/src/xterm_craft_workshop/: bank.py  bank_builder.py  currency.py  exchange_rate.py  money.py  money_calculator.py  portfolio.py
python/tests/: bank_builder.py  test_bank.py  test_exchange_rate.py  test_money.py  test_portfolio.py
