[project]
name = "xtrem-craft-workshop"
version = "1.0.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "approvaltests>=16.2.2",
    "coverage[toml]~=7.6.0 ; python_full_version >= '3.9'",
    "mutmut>=3.5.0",
    "mypy>=1.19.1",
    "py~=1.11.0 ; python_full_version >= '2.7'",
    "pyparsing~=3.2.0 ; python_full_version >= '3.9'",
    "pytest>=6.2.5",
    "pytest~=6.2.0 ; python_full_version >= '3.6'",
    "pytest-approvaltests>=0.2.3",
    "pytest-assertions>=0.5.0",
    "pytest-cov~=6.0.0 ; python_full_version >= '3.9'",
    "pytest-pythonpath==0.7.4 ; python_full_version >= '2.6' and python_full_version < '4'",
    "pytest-watch==4.2.0",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
    "toml~=0.10.0 ; python_full_version >= '2.6'",
    "tomli~=2.0 ; python_full_version >= '3.8'",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "I", "C", "W", "Q"]
ignore = []
preview = true
explicit-preview-rules = true
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 7

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = true
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings.
docstring-code-format = false
# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.taskipy.tasks]
test = { cmd = "pytest", help = "runs all unit tests" }
mypy = { cmd = "mypy --strict", help = "validates typing using mypy" }
ruff = { cmd = "ruff check --output-format concise", help = "validates code style using ruff" }
lint = { cmd = "task ruff --exit-zero && task mypy", help = "Quality standards analysis" }
outdated = { cmd = "uv tree --outdated --depth=1 --quiet | grep latest", help = "Verifies dependencies freshness"}
requirements = { cmd = "uv pip compile pyproject.toml --no-deps --no-annotate -o requirements.txt", help = "Generates requirements.txt based on pyproject.toml"}
